# ECS

./: .gitignore  CMakeLists.txt  Makefile  README.md  rtype
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release-on-merge.yml
assets/rtype/: Projectiles.json  Ship_Enemy.json  Silver_Ship.json
assets/tmp/: BackGrounds.json  Characters.json  Miscellaneous.json  Projectiles.json  Silver_Ship.json
ecs/: CMakeLists.txt
ecs/auto/: AutoRegister.cpp  components.txt  systems.json
ecs/includes/: AssetManager.hpp  Component.hpp  Entity.hpp  Injectable.hpp  Registry.hpp  System.hpp
ecs/includes/components/: Bullet.hpp  Collider.hpp  Cooldown.hpp  CooldownInput.hpp  Enemy.hpp  Frame.hpp  Gamepad.hpp  Gravity.hpp  Health.hpp  MainPlayer.hpp  Position.hpp  Speed.hpp  Sprite.hpp  Time.hpp  Velocity.hpp
ecs/includes/data/: Debug.hpp  DeltaTime.hpp
ecs/includes/events/: CollisionEvent.hpp  DeadEvent.hpp  EventBus.hpp  InputEvent.hpp
ecs/includes/systems/: BulletSystem.hpp  CollisionSystem.hpp  CooldownSystem.hpp  DebugDrawSystem.hpp  GravitySystem.hpp  InputSystem.hpp  LifeSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  TimeSystem.hpp  UiSystem.hpp
ecs/src/: AssetManager.cpp  Registry.cpp
ecs/src/systems/: BulletSystem.cpp  CollisionSystem.cpp  CooldownSystem.cpp  DebugDrawSystem.cpp  GravitySystem.cpp  InputSystem.cpp  LifeSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  TimeSystem.cpp  UiSystem.cpp
engine/core/: CMakeLists.txt
engine/core/includes/: Engine.hpp
engine/core/src/: Engine.cpp
game/flappybird/: CMakeLists.txt  main.cpp
game/flappybird/auto/: AutoRegister.cpp  CMakeLists.txt  components.txt  generate_autoregister.py  systems.json
game/rtype/: CMakeLists.txt  main.cpp
game/rtype/auto/: AutoRegister.cpp  CMakeLists.txt  components.txt  systems.json
game/rtype/includes/: Data.hpp  InputAction.hpp
game/rtype/includes/systems/: BulletSystem.hpp  ResetVelocitySystem.hpp
game/rtype/src/: InputAction.cpp  ReactionSystem.cpp
game/rtype/src/systems/: BulletSystem.cpp  ResetVelocitySystem.cpp
